Make "More windows..." menu item in MDI "Window" menu work in wxMSW.

Don't interpret the commands from this menu item as child window selection.

Closes #3295.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73398 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775